## Process this file with automake to produce Makefile.in

includedir = $(prefix)/include

SUBDIRS = HepMC src fio test examples examples/fio examples/pythia8 examples/root doc
# list all subdirectories - for distribution and cleaning
DIST_SUBDIRS = HepMC src fio test examples examples/fio examples/pythia8 examples/root doc
