## Process this file with automake to produce Makefile.in

includedir = $(prefix)/include
COPY_P = @COPY_P@

pkginclude_HEADERS = \
	CommonIO.h	\
	CompareGenEvent.h	\
	Flow.h		\
	GenEvent.h	\
	GenParticle.h	\
	GenVertex.h	\
	HeavyIon.h	\
	HEPEVT_Wrapper.h	\
	HerwigWrapper6_4.h	\
	HerwigWrapper.h	\
	IO_AsciiParticles.h	\
	IO_BaseClass.h	\
	IO_GenEvent.h	\
	IO_HEPEVT.h	\
	IO_HERWIG.h	\
	IO_PDG_ParticleDataTable.h	\
	ParticleData.h	\
	ParticleDataTable.h	\
	PdfInfo.h	\
	Polarization.h	\
	PythiaWrapper5_720.h	\
	PythiaWrapper6_152.h	\
	PythiaWrapper6_152_WIN32.h	\
	PythiaWrapper6_2.h	\
	PythiaWrapper6_2_WIN32.h	\
	PythiaWrapper.h	\
	WeightContainer.h	\
	SearchVector.h	\
	SimpleVector.h	\
	SimpleVector.icc	\
	enable_if.h	\
	is_arithmetic.h	\
	TempParticleMap.h	\
	Units.h	\
	Version.h	\
	HepMCDefs.h
